fixing gap below nav in wn_neuse.

--- a/drupal/sites/all/themes/watershed/css/style.css
+++ b/drupal/sites/all/themes/watershed/css/style.css
@@ -175,8 +175,11 @@ div.status {
 }
 
 #header, #main {
-  float: left;
   width: 100%;
+}
+
+.one-sidebar #main {
+  float:left;
 }
 
 #name-and-slogan {
